content alignment fix

--- a/src/style.css
+++ b/src/style.css
@@ -11,15 +11,16 @@
 }
 
 .content {
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     padding: 2rem 1rem;
     background-color: #fee2e2;
     border: 1rem solid var(--red-orange);
     border-image: repeating-linear-gradient(45deg, transparent, transparent 5px, var(--red-orange) 6px, var(--red-orange) 15px, transparent 16px, transparent 20px) 20/1rem;
 }
 
+/*Seems unconstrained to top*/
 .nav {
     display: flex;
     justify-content: center;
